[project]
name = "netdoktor-langgraph"
version = "0.0.1"
description = "NetDoktor LangGraph RAG system"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["retrieval_graph", "index_graph", "shared"]

[tool.setuptools.package-dir]
retrieval_graph = "src/retrieval_graph"
index_graph = "src/index_graph"
shared = "src/shared"

[tool.pytest.ini_options]
pythonpath = ["src"]